crates/wac-parser/tests/resolution/fail/duplicate-resource-method.wac
world foo {
    resource x {
        x: func();
        x: static func();
    }
}